--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.2",
+    "@sanity/client": "^6.1.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.11.5",
     "@types/node": "20.2.5",
